--- a/unets.ipynb
+++ b/unets.ipynb
@@ -28,35 +28,45 @@
     "import keras.preprocessing as kp\n",
     "\n",
     "data_gen_args = dict(\n",
-    "rotation_range=20,\n",
+    "rotation_range=30,\n",
     "width_shift_range=0.1,\n",
     "height_shift_range=0.1,\n",
-    "zoom_range=0.2,validation_split=0.2,horizontal_flip=True)\n",
+    "zoom_range=0.3,horizontal_flip=True)\n",
     "image_datagen = kp.image.ImageDataGenerator(preprocessing_function=lambda x: x/255.,**data_gen_args)\n",
     "mask_datagen = kp.image.ImageDataGenerator(**data_gen_args)\n",
+    "\n",
+    "target_size = (240,320)\n",
+    "batch_size = 8\n",
     "\n",
     "image_generator = image_datagen.flow_from_directory(\n",
     "    './imgs_train',\n",
     "    class_mode=None,\n",
-    "    seed=0,target_size=(240,320),batch_size=8)\n",
+    "    seed=0,target_size=target_size,batch_size=batch_size)\n",
     "\n",
     "mask_generator = mask_datagen.flow_from_directory(\n",
     "    './masks_train',\n",
     "    class_mode=None,\n",
-    "    seed=0,target_size=(240,320),color_mode='grayscale',batch_size=8)\n",
+    "    seed=0,target_size=target_size,color_mode='grayscale',batch_size=batch_size)\n",
     "\n",
     "image_generator_test = image_datagen.flow_from_directory(\n",
     "    './imgs_test',\n",
     "    class_mode=None,\n",
-    "    seed=0,target_size=(240,320),batch_size=8)\n",
+    "    seed=0,target_size=target_size,batch_size=batch_size)\n",
     "\n",
     "mask_generator_test = mask_datagen.flow_from_directory(\n",
     "    './masks_test',\n",
     "    class_mode=None,\n",
-    "    seed=0,target_size=(240,320),color_mode='grayscale',batch_size=8)\n",
+    "    seed=0,target_size=target_size,color_mode='grayscale',batch_size=batch_size)\n",
     "\n",
     "train_generator = zip(image_generator, mask_generator)\n",
     "test_generator = zip(image_generator_test,mask_generator_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's have a look at the above code, because it's doing something slightly different from what we've seen before.  Specifically, we're doing two new things.  First, we're storing our training and test data out of core: this dataset is very large, and we don't want to put it all in memory, thus we use the ImageDataGenerator class, which will read images from a directory during runtime, normalize them according to a preprocessing function (dividing the input by 255 for example), and perform our second new thing: *data augmentation*.  Data augmentation relies on the idea that the semantic content of an image remains the same regardless of small variations.  For example, a dog is still a dog even after rotating an image by 20 degrees, or flipping across its axis, or zooming in or out a little bit.  By applying these operations to our training examples, the network can never rely on a single pixel's value, thus reducing the possibility of [overfitting](https://en.wikipedia.org/wiki/Overfitting), and also enhances the generalizability of the network.   "
    ]
   },
   {
@@ -86,9 +96,13 @@
     "\n",
     "Obviously, we're going to need to come up with some different ideas than what we've seen so far, because continously downscaling the image isn't going to work: the output needs to be the same size as the input.  However, we'll need to do some downscaling, both for the sake of computational efficiency and to increase the size of our network's perceptive field (the parts of the image that go into classifying a particular pixel).  A network architecture that has proven extremely useful for this task is called [U-net](https://arxiv.org/pdf/1505.04597.pdf), so called because it resembles a U.  It borrows some ideas from ResNet as well in that there are skip connections, although these are a bit different than the ResNet ones.  U-net looks like this:\n",
     "<img src=unet.svg width=800/>\n",
-    "Note that to save space, when the convolution kernel size is not specified, it's 3x3.  What does this network do?  Essentially, what we have is a sequence of image downscalings, followed by a sequence of upscalings to get us back to the original image size.  Without the skip connections, using this architecture for the problem we're considering does work, however the resulting segmentation tends to be very \"low-res\" for lack of a better word: edges aren't captured well and spatial localization is poor.  Why is this?  During the downsampling step, we're throwing away information, and as we are well aware, it isn't possible to recover the original image after downscaling.  U-net solves this problem by concatenating the output of each downsampling layer with the commensurately sized upsampling layer.  Thus, each layer gets access to the features that were generated during downsampling at its own scale *along with the larger scale information produced by further downsampling*.\n",
+    "Note that to save space, when the convolution kernel size is not specified, it's 3x3.  \n",
     "\n",
-    "Note that the figure above shows a U-net that downsamples twice (and upsamples twice).  However, in practice deeper networks are often used.  The following code gives a U-net that downsamples and upsamples only once.  **Extend the network below such that it has a total of four downsampling steps and four upsampling steps.**   \n",
+    "What does this network do?  Essentially, what we have is a sequence of image downscalings, followed by a sequence of upscalings to get us back to the original image size.  Note that at no point do we have a fully-connected layer or global average pool or flatten or anything else that would make the feature maps not images.  Such an architecture is referred to as a *fully convolutional network* or a FCN.   \n",
+    "\n",
+    "Without the skip connections, using this architecture for the problem we're considering does work, however the resulting segmentation tends to be very \"low-res\" for lack of a better word: edges aren't captured well and spatial localization is poor.  Why is this?  During the downsampling step, we're throwing away information by distilling the contents of a neighborhood of four pixels into a single value.  As we are well aware, it isn't possible to recover the original image from this reduced representation.  U-net solves this problem by concatenating every upsampled layer to the previously computed and commensurately sized downsampling layer.  Thus, each layer gets access to the features that were generated during downsampling at its own scale *along with the larger scale information produced by further downsampling*.\n",
+    "\n",
+    "Note that the figure above shows a U-net that downsamples twice (and upsamples twice).  However, in practice deeper networks are often used.  The following code gives a U-net that downsamples and upsamples only once.  **Extend the network below such that it has a total of five downsampling steps and four upsampling steps.**  This will yield a network with a maximum number of feature maps of 1024!  This is alot: the model is very large and we will definitely need to run it on a GPU.  You also may have to adjust your batch size so that everything fits in GPU memory.   \n",
     "\n",
     "\n",
     "\n",
@@ -111,11 +125,13 @@
     "    conv1 = kl.Conv2D(64, 3, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(conv1)\n",
     "    conv1 = kl.BatchNormalization()(conv1)\n",
     "    pool1 = kl.MaxPooling2D(pool_size=(2, 2))(conv1)\n",
-    "     \n",
+    "\n",
+    "    \n",
     "    conv5 = kl.Conv2D(128, 3, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(pool1)\n",
     "    conv5 = kl.BatchNormalization()(conv5)\n",
     "    conv5 = kl.Conv2D(128, 3, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(conv5)\n",
     "    conv5 = kl.BatchNormalization()(conv5)\n",
+    "\n",
     "\n",
     "    depool9 = kl.UpSampling2D(size = (2,2))(conv5)\n",
     "    upconv9 = kl.Conv2D(64, 2, activation = 'linear', padding = 'same', kernel_initializer = 'he_normal')(depool9)\n",
@@ -134,6 +150,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once we have coded U-net, we can train it just like any other model.  Our loss function for this model is going to be binary crossentropy: this is the appropriate loss for the case in which we only have two classes.\n",
+    "\n",
+    "Also, note that this problem requires a somewhat reduced learning rate compared to previous examples.  A good starting value is $10^{-4}$."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -145,11 +170,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "As in other CNNs, we'll want to checkpoint our model weights and we'll want to specify a learning rate schedule.  I make no claim that this learning rate schedule is the best.  For a correctly implemented U-net, it seems to work okay for me.  "
+   ]
   },
   {
    "cell_type": "code",
@@ -158,7 +183,7 @@
    "outputs": [],
    "source": [
     "import keras.callbacks as kc\n",
-    "filepath = './checkpoints'\n",
+    "filepath = './checkpoints_2.h5'\n",
     "\n",
     "# Prepare callbacks for model saving and for learning rate adjustment.\n",
     "checkpoint = kc.ModelCheckpoint(filepath=filepath,\n",
@@ -168,7 +193,9 @@
     "\n",
     "def lr_schedule(epoch):\n",
     "    lr = 1e-4\n",
-    "    if epoch > 40:\n",
+    "    if epoch > 80:\n",
+    "        lr /=16.\n",
+    "    elif epoch > 40:\n",
     "        lr /= 8.\n",
     "    elif epoch > 25:\n",
     "        lr /= 4.\n",
@@ -181,6 +208,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, we can fit the model as before.  However, we'll use the fit_generator command as we want to fit the data from a generator rather than from a numpy array.  *When you call this command, it's going to take a very long time to run, up to 8 hours on a GPU.*  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -188,7 +222,15 @@
    },
    "outputs": [],
    "source": [
-    "model.fit_generator(train_generator, steps_per_epoch=(3041-305)//8,epochs=10,validation_data=test_generator,validation_steps=301//8,callbacks=[checkpoint,lr_scheduler])"
+    "model.load_weights('checkpoints_2.h5')\n",
+    "model.fit_generator(train_generator, steps_per_epoch=(3041-305)//batch_size,epochs=200,validation_data=test_generator,validation_steps=301//8,callbacks=[checkpoint,lr_scheduler])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once the model is done training, we can make predictions on the test data:"
    ]
   },
   {
@@ -199,19 +241,14 @@
    "source": [
     "# Make a prediction on the test set\n",
     "\n",
-    "img = image_generator_test.next()\n",
-    "mask_true = mask_generator_test.next()\n",
-    "mask = model.predict(img)\n",
-    "plt.imshow(img[0].squeeze())\n",
-    "plt.imshow(mask[0].squeeze(),alpha=0.3,vmin=0,vmax=1)"
+    "imgs = image_generator_test.next()\n",
+    "masks_true = mask_generator_test.next()\n",
+    "masks = model.predict(imgs)\n",
+    "fig,axs = plt.subplots(nrows=batch_size,figsize=(4,4*batch_size))\n",
+    "for img,mask,ax in zip(imgs,masks,axs):\n",
+    "    ax.imshow(img.squeeze())\n",
+    "    ax.imshow(mask.squeeze(),alpha=0.6,vmin=0,vmax=1)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
